package decoupling.levels.level4;

public interface Service {

    int featureA();

    int featureB();
}
