@startuml

title __LEVEL2's Class Diagram__\n

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Consumer {
        + consume()
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Main {
        {static} + main()
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.Service {
        + feature()
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.ServiceA {
        + feature()
        - featureA()
    }
  }
  

  namespace decoupling.levels.level2 {
    class decoupling.levels.level2.ServiceB {
        + feature()
        - featureB()
    }
  }
  

  decoupling.levels.level2.ServiceA -up-|> decoupling.levels.level2.Service
  decoupling.levels.level2.ServiceB -up-|> decoupling.levels.level2.Service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
